--- a/index.html
+++ b/index.html
@@ -4872,7 +4872,7 @@
                     <div class="page-item-wrap relative ">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank" rel="noopener nofollow" class="page-item-each py-10 flex-both-center" href="https://ivi.cx/i/cfg?665fbb20" data-id="1136071" data-type="page_item">
-                                                                <img class="link-each-image" data-src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" src="https://cdn.bio.link/uploads/thumbnails/2023-03-27/GgnEQcyT8MCRYK6KT8yhfoPEJ9PWsbGI.png" alt="Zalo">
+                                                                <img class="link-each-image" data-src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="AppStore">
                                                             <span class=" item-title text-center">Install As An App</span>
                         </a>
                     </div>
