--- a/index.html
+++ b/index.html
@@ -4840,6 +4840,19 @@
             }
         </style>
         <style></style>
+        <script>
+  var _paq = window._paq = window._paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="https://jorkthepork.matomo.cloud/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '1']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.async=true; g.src='https://cdn.matomo.cloud/jorkthepork.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
     </head>
     <body>
         <div class="min-h-full flex-h-center" id="background_div">
