--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta property="og:description" content="Link to everywhere from your bio link."/>
         <meta property="og:image:secure_url" content="https://i.im.ge/2024/06/05/Km4wyK.channels4-profile-jpeg.png"/>
         <meta property="og:image" content="https://i.im.ge/2024/06/05/Km4wyK.channels4-profile-jpeg.png"/>
-        <meta property="profile:username" content="khoindvn"/>
+        <meta property="profile:username" content="JorkHub"/>
         <meta name="twitter:card" content="summary"/>
         <meta name="twitter:title" content="JorkHub"/>
         <meta name="twitter:image" content="https://cdn.bio.link/uploads/profile_pictures/2023-03-27/CIPckUvi84dZBQe02wml7U65JF9P7nDT.png"/>
